# husky_coal_mine_sim

./: .gitattributes  README.md  README.md~
husky_coal_sim/husky_coal_control/: CMakeLists.txt~  package.xml
husky_coal_sim/husky_coal_control/config/: control.yaml  pid_gains.yaml
husky_coal_sim/husky_coal_control/env-hooks/: 60.husky_coal_control.sh  60.husky_coal_control.sh~
husky_coal_sim/husky_coal_control/launch/: control.launch  control.launch~  teleop.launch  teleop_keyboard.launch
husky_coal_sim/husky_coal_control/scripts/: teleop_keyboard.h  teleop_keyboard.py
husky_coal_sim/husky_coal_description/: CMakeLists.txt  package.xml
husky_coal_sim/husky_coal_description/env-hooks/: 60.husky_coal_description.sh~
husky_coal_sim/husky_coal_description/launch/: description.launch
husky_coal_sim/husky_coal_description/urdf/: husky_1vel_arch.urdf.xacro  husky_4vel.urdf.xacro  husky_OS1-64_arch.urdf.xacro  husky_OS1-64_arch.urdf.xacro~  wheel.urdf.xacro
husky_coal_sim/husky_coal_gazebo/: CMakeLists.txt  README  package.xml  topic_moniter.py
husky_coal_sim/husky_coal_gazebo/env-hooks/: 60.husky_coal_gazebo.sh  60.husky_coal_gazebo.sh~
husky_coal_sim/husky_coal_gazebo/launch/: coal_mine_playpen.launch  husky_coalpen(backup).launch  husky_coalpen.launch  husky_coalpen.launch~  husky_empty_world.launch  husky_playpen.launch  move_to_points_relative.launch  (+1 more)
husky_coal_sim/husky_coal_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml
husky_coal_sim/husky_coal_viz/: CMakeLists.txt  package.xml
ouster_gazebo_plugins/: CMakeLists.txt~
(+26 files in other folders)
